# casa-feita-backend

./: .gitignore  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
casafeita/: admin.py  apps.py
casafeita/migrations/: 0001_initial.py  0002_alter_itemcompra_options.py  0002_categoria_fabricante_produto.py  0002_remove_fabricante_capa_fabricante_logo_produto_foto.py  0003_avaliacao.py  0004_alter_avaliacao_ranking.py  0005_alter_avaliacao_data_alter_avaliacao_ranking.py  0006_rename_conteudo_avaliacao_descricao_and_more.py  0007_cartao_endereco_alter_avaliacao_options_compra_and_more.py
casafeita/models/: __init__.py  avaliacao.py  cartao.py  compra.py  cor.py  fabricante.py  produto.py  usuario.py
casafeita/serializers/: __init__.py  avaliacao.py  cartao.py  categoria.py  compra.py  cor.py  fabricante.py  produto.py  usuario.py
casafeita/views/: __init__.py  avaliacao.py  cartao.py  categoria.py  compra.py  cor.py  fabricante.py  produto.py  usuario.py
config/: settings.py  urls.py
